Fix calendar rendering behind date picker when two pickers are rendered next to each other

--- a/src/DateRangePicker.less
+++ b/src/DateRangePicker.less
@@ -54,6 +54,7 @@
     position: absolute;
     top: 100%;
     left: 0;
+    z-index: 1;
 
     &--closed {
       display: none;
